cc/y.output

state 0
	$accept: .top $end 

	startExpr  shift 3
	startProg  shift 2
	.  error

	top  goto 1

state 1
	$accept:  top.$end 

	$end  accept
	.  error


state 2
	top:  startProg.prog tokEOF 
	prog: .    (3)

	.  reduce 3 (src line 190)

	prog  goto 4

state 3
	top:  startExpr.cexpr tokEOF 

	tokLitChar  shift 10
	tokName  shift 8
	tokNumber  shift 9
	tokOffsetof  shift 21
	tokVaArg  shift 23
	tokString  shift 24
	'&'  shift 13
	'+'  shift 14
	'-'  shift 15
	'*'  shift 12
	'!'  shift 16
	'~'  shift 17
	tokSizeof  shift 20
	'('  shift 22
	tokDec  shift 19
	tokInc  shift 18
	.  error

	expr  goto 7
	cexpr  goto 5
	expr_list  goto 6
	string_list  goto 11

state 4
	top:  startProg prog.tokEOF 
	prog:  prog.xdecl 

	tokAuto  shift 53
	tokChar  shift 40
	tokConst  shift 58
	tokDouble  shift 47
	tokEnum  shift 39
	tokExtern  shift 29
	tokFloat  shift 46
	tokInline  shift 57
	tokInt  shift 42
	tokLong  shift 43
	tokRegister  shift 56
	tokShort  shift 41
	tokSigned  shift 44
	tokStatic  shift 54
	tokStruct  shift 51
	tokTypeName  shift 37
	tokTypedef  shift 55
	tokUnion  shift 52
	tokUnsigned  shift 45
	tokVoid  shift 48
	tokVolatile  shift 59
	tokDefine  shift 32
	tokEOF  shift 25
	.  error

	fndef  goto 28
	define  goto 30
	xdecl  goto 26
	topdecl  goto 27
	cname  goto 49
	qname  goto 50
	tname  goto 35
	cqname  goto 36
	cqname_list  goto 33
	typeclass  goto 31
	structunion  goto 38
	typespec  goto 34

state 5
	top:  startExpr cexpr.tokEOF 

	tokEOF  shift 60
	.  error


state 6
	cexpr:  expr_list.    (5)
	expr_list:  expr_list.',' expr 

	','  shift 61
	.  reduce 5 (src line 201)


state 7
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'%' expr 
	expr:  expr.tokLsh expr 
	expr:  expr.tokRsh expr 
	expr:  expr.'<' expr 
	expr:  expr.'>' expr 
	expr:  expr.tokLtEq expr 
	expr:  expr.tokGtEq expr 
	expr:  expr.tokEqEq expr 
	expr:  expr.tokNotEq expr 
	expr:  expr.'&' expr 
	expr:  expr.'^' expr 
	expr:  expr.'|' expr 
	expr:  expr.tokAndAnd expr 
	expr:  expr.tokOrOr expr 
	expr:  expr.'?' cexpr ':' expr 
	expr:  expr.'=' expr 
	expr:  expr.tokAddEq expr 
	expr:  expr.tokSubEq expr 
	expr:  expr.tokMulEq expr 
	expr:  expr.tokDivEq expr 
	expr:  expr.tokModEq expr 
	expr:  expr.tokLshEq expr 
	expr:  expr.tokRshEq expr 
	expr:  expr.tokAndEq expr 
	expr:  expr.tokXorEq expr 
	expr:  expr.tokOrEq expr 
	expr:  expr.'(' expr_list_opt ')' 
	expr:  expr.'[' cexpr ']' 
	expr:  expr.tokInc 
	expr:  expr.tokDec 
	expr:  expr.tokArrow tag 
	expr:  expr.'.' tag 
	expr_list:  expr.    (175)

	'='  shift 81
	tokAddEq  shift 82
	tokSubEq  shift 83
	tokMulEq  shift 84
	tokDivEq  shift 85
	tokModEq  shift 86
	tokLshEq  shift 87
	tokRshEq  shift 88
	tokAndEq  shift 89
	tokXorEq  shift 90
	tokOrEq  shift 91
	'?'  shift 80
	tokOrOr  shift 79
	tokAndAnd  shift 78
	'|'  shift 77
	'^'  shift 76
	'&'  shift 75
	tokEqEq  shift 73
	tokNotEq  shift 74
	'<'  shift 69
	'>'  shift 70
	tokLtEq  shift 71
	tokGtEq  shift 72
	tokLsh  shift 67
	tokRsh  shift 68
	'+'  shift 62
	'-'  shift 63
	'*'  shift 64
	'/'  shift 65
	'%'  shift 66
	'.'  shift 97
	'['  shift 93
	'('  shift 92
	tokDec  shift 95
	tokInc  shift 94
	tokArrow  shift 96
	.  reduce 175 (src line 1327)


state 8
	expr:  tokName.    (6)

	.  reduce 6 (src line 212)


state 9
	expr:  tokNumber.    (7)

	.  reduce 7 (src line 218)


state 10
	expr:  tokLitChar.    (8)

	.  reduce 8 (src line 223)


state 11
	expr:  string_list.    (9)
	string_list:  string_list.tokString 

	tokString  shift 98
	.  reduce 9 (src line 228)


state 12
	expr:  '*'.expr 

	tokLitChar  shift 10
	tokName  shift 8
	tokNumber  shift 9
	tokOffsetof  shift 21
	tokVaArg  shift 23
	tokString  shift 24
	'&'  shift 13
	'+'  shift 14
	'-'  shift 15
	'*'  shift 12
	'!'  shift 16
	'~'  shift 17
	tokSizeof  shift 20
	'('  shift 22
	tokDec  shift 19
	tokInc  shift 18
	.  error

	expr  goto 99
	string_list  goto 11

state 13
	expr:  '&'.expr 

	tokLitChar  shift 10
	tokName  shift 8
	tokNumber  shift 9
	tokOffsetof  shift 21
	tokVaArg  shift 23
	tokString  shift 24
	'&'  shift 13
	'+'  shift 14
	'-'  shift 15
	'*'  shift 12
	'!'  shift 16
	'~'  shift 17
	tokSizeof  shift 20
	'('  shift 22
	tokDec  shift 19
	tokInc  shift 18
	.  error

	expr  goto 100
	string_list  goto 11

state 14
	expr:  '+'.expr 

	tokLitChar  shift 10
	tokName  shift 8
	tokNumber  shift 9
	tokOffsetof  shift 21
	tokVaArg  shift 23
	tokString  shift 24
	'&'  shift 13
	'+'  shift 14
	'-'  shift 15
	'*'  shift 12
	'!'  shift 16
	'~'  shift 17
	tokSizeof  shift 20
	'('  shift 22
	tokDec  shift 19
	tokInc  shift 18
	.  error

	expr  goto 101
	string_list  goto 11

state 15
	expr:  '-'.expr 

	tokLitChar  shift 10
	tokName  shift 8
	tokNumber  shift 9
	tokOffsetof  shift 21
	tokVaArg  shift 23
	tokString  shift 24
	'&'  shift 13
	'+'  shift 14
	'-'  shift 15
	'*'  shift 12
	'!'  shift 16
	'~'  shift 17
	tokSizeof  shift 20
	'('  shift 22
	tokDec  shift 19
	tokInc  shift 18
	.  error

	expr  goto 102
	string_list  goto 11

state 16
	expr:  '!'.expr 

	tokLitChar  shift 10
	tokName  shift 8
	tokNumber  shift 9
	tokOffsetof  shift 21
	tokVaArg  shift 23
	tokString  shift 24
	'&'  shift 13
	'+'  shift 14
	'-'  shift 15
	'*'  shift 12
	'!'  shift 16
	'~'  shift 17
	tokSizeof  shift 20
	'('  shift 22
	tokDec  shift 19
	tokInc  shift 18
	.  error

	expr  goto 103
	string_list  goto 11

state 17
	expr:  '~'.expr 

	tokLitChar  shift 10
	tokName  shift 8
	tokNumber  shift 9
	tokOffsetof  shift 21
	tokVaArg  shift 23
	tokString  shift 24
	'&'  shift 13
	'+'  shift 14
	'-'  shift 15
	'*'  shift 12
	'!'  shift 16
	'~'  shift 17
	tokSizeof  shift 20
	'('  shift 22
	tokDec  shift 19
	tokInc  shift 18
	.  error

	expr  goto 104
	string_list  goto 11

state 18
	expr:  tokInc.expr 

	tokLitChar  shift 10
	tokName  shift 8
	tokNumber  shift 9
	tokOffsetof  shift 21
	tokVaArg  shift 23
	tokString  shift 24
	'&'  shift 13
	'+'  shift 14
	'-'  shift 15
	'*'  shift 12
	'!'  shift 16
	'~'  shift 17
	tokSizeof  shift 20
	'('  shift 22
	tokDec  shift 19
	tokInc  shift 18
	.  error

	expr  goto 105
	string_list  goto 11

state 19
	expr:  tokDec.expr 

	tokLitChar  shift 10
	tokName  shift 8
	tokNumber  shift 9
	tokOffsetof  shift 21
	tokVaArg  shift 23
	tokString  shift 24
	'&'  shift 13
	'+'  shift 14
	'-'  shift 15
	'*'  shift 12
	'!'  shift 16
	'~'  shift 17
	tokSizeof  shift 20
	'('  shift 22
	tokDec  shift 19
	tokInc  shift 18
	.  error

	expr  goto 106
	string_list  goto 11

state 20
	expr:  tokSizeof.expr 
	expr:  tokSizeof.'(' abtype ')' 

	tokLitChar  shift 10
	tokName  shift 8
	tokNumber  shift 9
	tokOffsetof  shift 21
	tokVaArg  shift 23
	tokString  shift 24
	'&'  shift 13
	'+'  shift 14
	'-'  shift 15
	'*'  shift 12
	'!'  shift 16
	'~'  shift 17
	tokSizeof  shift 20
	'('  shift 108
	tokDec  shift 19
	tokInc  shift 18
	.  error

	expr  goto 107
	string_list  goto 11

state 21
	expr:  tokOffsetof.'(' abtype ',' expr ')' 

	'('  shift 109
	.  error


state 22
	expr:  '('.abtype ')' expr 
	expr:  '('.abtype ')' braced_init_list 
	expr:  '('.cexpr ')' 

	tokAuto  shift 53
	tokChar  shift 40
	tokConst  shift 58
	tokDouble  shift 47
	tokEnum  shift 39
	tokExtern  shift 114
	tokFloat  shift 46
	tokInline  shift 57
	tokInt  shift 42
	tokLitChar  shift 10
	tokLong  shift 43
	tokName  shift 8
	tokNumber  shift 9
	tokOffsetof  shift 21
	tokRegister  shift 56
	tokShort  shift 41
	tokSigned  shift 44
	tokStatic  shift 54
	tokStruct  shift 51
	tokTypeName  shift 37
	tokTypedef  shift 55
	tokUnion  shift 52
	tokUnsigned  shift 45
	tokVaArg  shift 23
	tokVoid  shift 48
	tokVolatile  shift 59
	tokString  shift 24
	'&'  shift 13
	'+'  shift 14
	'-'  shift 15
	'*'  shift 12
	'!'  shift 16
	'~'  shift 17
	tokSizeof  shift 20
	'('  shift 22
	tokDec  shift 19
	tokInc  shift 18
	.  error

	expr  goto 7
	cexpr  goto 111
	expr_list  goto 6
	cname  goto 49
	qname  goto 50
	tname  goto 35
	cqname  goto 36
	cqname_list  goto 33
	string_list  goto 11
	typeclass  goto 113
	structunion  goto 38
	abtype  goto 110
	type  goto 112
	typespec  goto 34

state 23
	expr:  tokVaArg.'(' expr ',' abtype ')' 

	'('  shift 115
	.  error


state 24
	string_list:  tokString.    (213)

	.  reduce 213 (src line 1546)


state 25
	top:  startProg prog tokEOF.    (1)

	.  reduce 1 (src line 178)


state 26
	prog:  prog xdecl.    (4)

	.  reduce 4 (src line 195)


state 27
	xdecl:  topdecl.    (131)

	.  reduce 131 (src line 1026)


state 28
	xdecl:  fndef.    (132)

	.  reduce 132 (src line 1032)


state 29
	cname:  tokExtern.    (101)
	xdecl:  tokExtern.tokString '{' prog '}' 

	tokString  shift 116
	.  reduce 101 (src line 791)


state 30
	xdecl:  define.    (134)

	.  reduce 134 (src line 1041)


state 31
	topdecl:  typeclass.idecor_list_opt ';' 
	fndef:  typeclass.decor decl_list_opt $$135 block 
	idecor_list_opt: .    (189)

	tokName  shift 124
	tokTypeName  shift 125
	'*'  shift 121
	'('  shift 122
	.  reduce 189 (src line 1407)

	decor  goto 118
	idecor  goto 123
	idecor_list  goto 119
	idecor_list_opt  goto 117
	tag  goto 120

state 32
	define:  tokDefine.tokName expr 

	tokName  shift 126
	.  error


state 33
	typeclass:  cqname_list.    (121)
	typeclass:  cqname_list.typespec cqname_list_opt 
	typeclass:  cqname_list.tname cqtname_list_opt 
	cqname_list:  cqname_list.cqname 

	tokAuto  shift 53
	tokChar  shift 40
	tokConst  shift 58
	tokDouble  shift 47
	tokEnum  shift 39
	tokExtern  shift 114
	tokFloat  shift 46
	tokInline  shift 57
	tokInt  shift 42
	tokLong  shift 43
	tokRegister  shift 56
	tokShort  shift 41
	tokSigned  shift 44
	tokStatic  shift 54
	tokStruct  shift 51
	tokTypeName  shift 37
	tokTypedef  shift 55
	tokUnion  shift 52
	tokUnsigned  shift 45
	tokVoid  shift 48
	tokVolatile  shift 59
	.  reduce 121 (src line 914)

	cname  goto 49
	qname  goto 50
	tname  goto 128
	cqname  goto 129
	structunion  goto 38
	typespec  goto 127

state 34
	typeclass:  typespec.cqname_list_opt 
	cqname_list_opt: .    (197)

	tokAuto  shift 53
	tokConst  shift 58
	tokExtern  shift 114
	tokInline  shift 57
	tokRegister  shift 56
	tokStatic  shift 54
	tokTypedef  shift 55
	tokVolatile  shift 59
	.  reduce 197 (src line 1453)

	cname  goto 49
	qname  goto 50
	cqname  goto 36
	cqname_list  goto 131
	cqname_list_opt  goto 130

state 35
	typeclass:  tname.cqtname_list_opt 
	cqtname_list_opt: .    (201)

	tokAuto  shift 53
	tokChar  shift 40
	tokConst  shift 58
	tokDouble  shift 47
	tokExtern  shift 114
	tokFloat  shift 46
	tokInline  shift 57
	tokInt  shift 42
	tokLong  shift 43
	tokRegister  shift 56
	tokShort  shift 41
	tokSigned  shift 44
	tokStatic  shift 54
	tokTypedef  shift 55
	tokUnsigned  shift 45
	tokVoid  shift 48
	tokVolatile  shift 59
	.  reduce 201 (src line 1476)

	cname  goto 49
	qname  goto 50
	tname  goto 136
	cqname  goto 135
	cqtname  goto 134
	cqtname_list  goto 133
	cqtname_list_opt  goto 132

state 36
	cqname_list:  cqname.    (195)

	.  reduce 195 (src line 1441)


state 37
	typespec:  tokTypeName.    (120)

	.  reduce 120 (src line 898)


state 38
	typespec:  structunion.tag 
	typespec:  structunion.tag_opt '{' sudecl_list '}' 
	tag_opt: .    (169)

	tokName  shift 124
	tokTypeName  shift 125
	.  reduce 169 (src line 1294)

	tag  goto 137
	tag_opt  goto 138

state 39
	typespec:  tokEnum.tag 
	typespec:  tokEnum.tag_opt '{' edecl_list comma_opt '}' 
	tag_opt: .    (169)

	tokName  shift 124
	tokTypeName  shift 125
	.  reduce 169 (src line 1294)

	tag  goto 139
	tag_opt  goto 140

state 40
	tname:  tokChar.    (107)

	.  reduce 107 (src line 826)


state 41
	tname:  tokShort.    (108)

	.  reduce 108 (src line 832)


state 42
	tname:  tokInt.    (109)

	.  reduce 109 (src line 837)


state 43
	tname:  tokLong.    (110)

	.  reduce 110 (src line 842)


state 44
	tname:  tokSigned.    (111)

	.  reduce 111 (src line 847)


state 45
	tname:  tokUnsigned.    (112)

	.  reduce 112 (src line 852)


state 46
	tname:  tokFloat.    (113)

	.  reduce 113 (src line 857)


state 47
	tname:  tokDouble.    (114)

	.  reduce 114 (src line 862)


state 48
	tname:  tokVoid.    (115)

	.  reduce 115 (src line 867)


state 49
	cqname:  cname.    (116)

	.  reduce 116 (src line 873)


state 50
	cqname:  qname.    (117)

	.  reduce 117 (src line 879)


state 51
	structunion:  tokStruct.    (139)

	.  reduce 139 (src line 1094)


state 52
	structunion:  tokUnion.    (140)

	.  reduce 140 (src line 1100)


state 53
	cname:  tokAuto.    (99)

	.  reduce 99 (src line 780)


state 54
	cname:  tokStatic.    (100)

	.  reduce 100 (src line 786)


state 55
	cname:  tokTypedef.    (102)

	.  reduce 102 (src line 796)


state 56
	cname:  tokRegister.    (103)

	.  reduce 103 (src line 801)


state 57
	cname:  tokInline.    (104)

	.  reduce 104 (src line 806)


state 58
	qname:  tokConst.    (105)

	.  reduce 105 (src line 813)


state 59
	qname:  tokVolatile.    (106)

	.  reduce 106 (src line 819)


state 60
	top:  startExpr cexpr tokEOF.    (2)

	.  reduce 2 (src line 184)


state 61
	expr_list:  expr_list ','.expr 

	tokLitChar  shift 10
	tokName  shift 8
	tokNumber  shift 9
	tokOffsetof  shift 21
	tokVaArg  shift 23
	tokString  shift 24
	'&'  shift 13
	'+'  shift 14
	'-'  shift 15
	'*'  shift 12
	'!'  shift 16
	'~'  shift 17
	tokSizeof  shift 20
	'('  shift 22
	tokDec  shift 19
	tokInc  shift 18
	.  error

	expr  goto 141
	string_list  goto 11

state 62
	expr:  expr '+'.expr 

	tokLitChar  shift 10
	tokName  shift 8
	tokNumber  shift 9
	tokOffsetof  shift 21
	tokVaArg  shift 23
	tokString  shift 24
	'&'  shift 13
	'+'  shift 14
	'-'  shift 15
	'*'  shift 12
	'!'  shift 16
	'~'  shift 17
	tokSizeof  shift 20
	'('  shift 22
	tokDec  shift 19
	tokInc  shift 18
	.  error

	expr  goto 142
	string_list  goto 11

state 63
	expr:  expr '-'.expr 

	tokLitChar  shift 10
	tokName  shift 8
	tokNumber  shift 9
	tokOffsetof  shift 21
	tokVaArg  shift 23
	tokString  shift 24
	'&'  shift 13
	'+'  shift 14
	'-'  shift 15
	'*'  shift 12
	'!'  shift 16
	'~'  shift 17
	tokSizeof  shift 20
	'('  shift 22
	tokDec  shift 19
	tokInc  shift 18
	.  error

	expr  goto 143
	string_list  goto 11

state 64
	expr:  expr '*'.expr 

	tokLitChar  shift 10
	tokName  shift 8
	tokNumber  shift 9
	tokOffsetof  shift 21
	tokVaArg  shift 23
	tokString  shift 24
	'&'  shift 13
	'+'  shift 14
	'-'  shift 15
	'*'  shift 12
	'!'  shift 16
	'~'  shift 17
	tokSizeof  shift 20
	'('  shift 22
	tokDec  shift 19
	tokInc  shift 18
	.  error

	expr  goto 144
	string_list  goto 11

state 65
	expr:  expr '/'.expr 

	tokLitChar  shift 10
	tokName  shift 8
	tokNumber  shift 9
	tokOffsetof  shift 21
	tokVaArg  shift 23
	tokString  shift 24
	'&'  shift 13
	'+'  shift 14
	'-'  shift 15
	'*'  shift 12
	'!'  shift 16
	'~'  shift 17
	tokSizeof  shift 20
	'('  shift 22
	tokDec  shift 19
	tokInc  shift 18
	.  error

	expr  goto 145
	string_list  goto 11

state 66
	expr:  expr '%'.expr 

	tokLitChar  shift 10
	tokName  shift 8
	tokNumber  shift 9
	tokOffsetof  shift 21
	tokVaArg  shift 23
	tokString  shift 24
	'&'  shift 13
	'+'  shift 14
	'-'  shift 15
	'*'  shift 12
	'!'  shift 16
	'~'  shift 17
	tokSizeof  shift 20
	'('  shift 22
	tokDec  shift 19
	tokInc  shift 18
	.  error

	expr  goto 146
	string_list  goto 11

state 67
	expr:  expr tokLsh.expr 

	tokLitChar  shift 10
	tokName  shift 8
	tokNumber  shift 9
	tokOffsetof  shift 21
	tokVaArg  shift 23
	tokString  shift 24
	'&'  shift 13
	'+'  shift 14
	'-'  shift 15
	'*'  shift 12
	'!'  shift 16
	'~'  shift 17
	tokSizeof  shift 20
	'('  shift 22
	tokDec  shift 19
	tokInc  shift 18
	.  error

	expr  goto 147
	string_list  goto 11

state 68
	expr:  expr tokRsh.expr 

	tokLitChar  shift 10
	tokName  shift 8
	tokNumber  shift 9
	tokOffsetof  shift 21
	tokVaArg  shift 23
	tokString  shift 24
	'&'  shift 13
	'+'  shift 14
	'-'  shift 15
	'*'  shift 12
	'!'  shift 16
	'~'  shift 17
	tokSizeof  shift 20
	'('  shift 22
	tokDec  shift 19
	tokInc  shift 18
	.  error

	expr  goto 148
	string_list  goto 11

state 69
	expr:  expr '<'.expr 

	tokLitChar  shift 10
	tokName  shift 8
	tokNumber  shift 9
	tokOffsetof  shift 21
	tokVaArg  shift 23
	tokString  shift 24
	'&'  shift 13
	'+'  shift 14
	'-'  shift 15
	'*'  shift 12
	'!'  shift 16
	'~'  shift 17
	tokSizeof  shift 20
	'('  shift 22
	tokDec  shift 19
	tokInc  shift 18
	.  error

	expr  goto 149
	string_list  goto 11

state 70
	expr:  expr '>'.expr 

	tokLitChar  shift 10
	tokName  shift 8
	tokNumber  shift 9
	tokOffsetof  shift 21
	tokVaArg  shift 23
	tokString  shift 24
	'&'  shift 13
	'+'  shift 14
	'-'  shift 15
	'*'  shift 12
	'!'  shift 16
	'~'  shift 17
	tokSizeof  shift 20
	'('  shift 22
	tokDec  shift 19
	tokInc  shift 18
	.  error

	expr  goto 150
	string_list  goto 11

state 71
	expr:  expr tokLtEq.expr 

	tokLitChar  shift 10
	tokName  shift 8
	tokNumber  shift 9
	tokOffsetof  shift 21
	tokVaArg  shift 23
	tokString  shift 24
	'&'  shift 13
	'+'  shift 14
	'-'  shift 15
	'*'  shift 12
	'!'  shift 16
	'~'  shift 17
	tokSizeof  shift 20
	'('  shift 22
	tokDec  shift 19
	tokInc  shift 18
	.  error

	expr  goto 151
	string_list  goto 11

state 72
	expr:  expr tokGtEq.expr 

	tokLitChar  shift 10
	tokName  shift 8
	tokNumber  shift 9
	tokOffsetof  shift 21
	tokVaArg  shift 23
	tokString  shift 24
	'&'  shift 13
	'+'  shift 14
	'-'  shift 15
	'*'  shift 12
	'!'  shift 16
	'~'  shift 17
	tokSizeof  shift 20
	'('  shift 22
	tokDec  shift 19
	tokInc  shift 18
	.  error

	expr  goto 152
	string_list  goto 11

state 73
	expr:  expr tokEqEq.expr 

	tokLitChar  shift 10
	tokName  shift 8
	tokNumber  shift 9
	tokOffsetof  shift 21
	tokVaArg  shift 23
	tokString  shift 24
	'&'  shift 13
	'+'  shift 14
	'-'  shift 15
	'*'  shift 12
	'!'  shift 16
	'~'  shift 17
	tokSizeof  shift 20
	'('  shift 22
	tokDec  shift 19
	tokInc  shift 18
	.  error

	expr  goto 153
	string_list  goto 11

state 74
	expr:  expr tokNotEq.expr 

	tokLitChar  shift 10
	tokName  shift 8
	tokNumber  shift 9
	tokOffsetof  shift 21
	tokVaArg  shift 23
	tokString  shift 24
	'&'  shift 13
	'+'  shift 14
	'-'  shift 15
	'*'  shift 12
	'!'  shift 16
	'~'  shift 17
	tokSizeof  shift 20
	'('  shift 22
	tokDec  shift 19
	tokInc  shift 18
	.  error

	expr  goto 154
	string_list  goto 11

state 75
	expr:  expr '&'.expr 

	tokLitChar  shift 10
	tokName  shift 8
	tokNumber  shift 9
	tokOffsetof  shift 21
	tokVaArg  shift 23
	tokString  shift 24
	'&'  shift 13
	'+'  shift 14
	'-'  shift 15
	'*'  shift 12
	'!'  shift 16
	'~'  shift 17
	tokSizeof  shift 20
	'('  shift 22
	tokDec  shift 19
	tokInc  shift 18
	.  error

	expr  goto 155
	string_list  goto 11

state 76
	expr:  expr '^'.expr 

	tokLitChar  shift 10
	tokName  shift 8
	tokNumber  shift 9
	tokOffsetof  shift 21
	tokVaArg  shift 23
	tokString  shift 24
	'&'  shift 13
	'+'  shift 14
	'-'  shift 15
	'*'  shift 12
	'!'  shift 16
	'~'  shift 17
	tokSizeof  shift 20
	'('  shift 22
	tokDec  shift 19
	tokInc  shift 18
	.  error

	expr  goto 156
	string_list  goto 11

state 77
	expr:  expr '|'.expr 

	tokLitChar  shift 10
	tokName  shift 8
	tokNumber  shift 9
	tokOffsetof  shift 21
	tokVaArg  shift 23
	tokString  shift 24
	'&'  shift 13
	'+'  shift 14
	'-'  shift 15
	'*'  shift 12
	'!'  shift 16
	'~'  shift 17
	tokSizeof  shift 20
	'('  shift 22
	tokDec  shift 19
	tokInc  shift 18
	.  error

	expr  goto 157
	string_list  goto 11

state 78
	expr:  expr tokAndAnd.expr 

	tokLitChar  shift 10
	tokName  shift 8
	tokNumber  shift 9
	tokOffsetof  shift 21
	tokVaArg  shift 23
	tokString  shift 24
	'&'  shift 13
	'+'  shift 14
	'-'  shift 15
	'*'  shift 12
	'!'  shift 16
	'~'  shift 17
	tokSizeof  shift 20
	'('  shift 22
	tokDec  shift 19
	tokInc  shift 18
	.  error

	expr  goto 158
	string_list  goto 11

state 79
	expr:  expr tokOrOr.expr 

	tokLitChar  shift 10
	tokName  shift 8
	tokNumber  shift 9
	tokOffsetof  shift 21
	tokVaArg  shift 23
	tokString  shift 24
	'&'  shift 13
	'+'  shift 14
	'-'  shift 15
	'*'  shift 12
	'!'  shift 16
	'~'  shift 17
	tokSizeof  shift 20
	'('  shift 22
	tokDec  shift 19
	tokInc  shift 18
	.  error

	expr  goto 159
	string_list  goto 11

state 80
	expr:  expr '?'.cexpr ':' expr 

	tokLitChar  shift 10
	tokName  shift 8
	tokNumber  shift 9
	tokOffsetof  shift 21
	tokVaArg  shift 23
	tokString  shift 24
	'&'  shift 13
	'+'  shift 14
	'-'  shift 15
	'*'  shift 12
	'!'  shift 16
	'~'  shift 17
	tokSizeof  shift 20
	'('  shift 22
	tokDec  shift 19
	tokInc  shift 18
	.  error

	expr  goto 7
	cexpr  goto 160
	expr_list  goto 6
	string_list  goto 11

state 81
	expr:  expr '='.expr 

	tokLitChar  shift 10
	tokName  shift 8
	tokNumber  shift 9
	tokOffsetof  shift 21
	tokVaArg  shift 23
	tokString  shift 24
	'&'  shift 13
	'+'  shift 14
	'-'  shift 15
	'*'  shift 12
	'!'  shift 16
	'~'  shift 17
	tokSizeof  shift 20
	'('  shift 22
	tokDec  shift 19
	tokInc  shift 18
	.  error

	expr  goto 161
	string_list  goto 11

state 82
	expr:  expr tokAddEq.expr 

	tokLitChar  shift 10
	tokName  shift 8
	tokNumber  shift 9
	tokOffsetof  shift 21
	tokVaArg  shift 23
	tokString  shift 24
	'&'  shift 13
	'+'  shift 14
	'-'  shift 15
	'*'  shift 12
	'!'  shift 16
	'~'  shift 17
	tokSizeof  shift 20
	'('  shift 22
	tokDec  shift 19
	tokInc  shift 18
	.  error

	expr  goto 162
	string_list  goto 11

state 83
	expr:  expr tokSubEq.expr 

	tokLitChar  shift 10
	tokName  shift 8
	tokNumber  shift 9
	tokOffsetof  shift 21
	tokVaArg  shift 23
	tokString  shift 24
	'&'  shift 13
	'+'  shift 14
	'-'  shift 15
	'*'  shift 12
	'!'  shift 16
	'~'  shift 17
	tokSizeof  shift 20
	'('  shift 22
	tokDec  shift 19
	tokInc  shift 18
	.  error

	expr  goto 163
	string_list  goto 11

state 84
	expr:  expr tokMulEq.expr 

	tokLitChar  shift 10
	tokName  shift 8
	tokNumber  shift 9
	tokOffsetof  shift 21
	tokVaArg  shift 23
	tokString  shift 24
	'&'  shift 13
	'+'  shift 14
	'-'  shift 15
	'*'  shift 12
	'!'  shift 16
	'~'  shift 17
	tokSizeof  shift 20
	'('  shift 22
	tokDec  shift 19
	tokInc  shift 18
	.  error

	expr  goto 164
	string_list  goto 11

state 85
	expr:  expr tokDivEq.expr 

	tokLitChar  shift 10
	tokName  shift 8
	tokNumber  shift 9
	tokOffsetof  shift 21
	tokVaArg  shift 23
	tokString  shift 24
	'&'  shift 13
	'+'  shift 14
	'-'  shift 15
	'*'  shift 12
	'!'  shift 16
	'~'  shift 17
	tokSizeof  shift 20
	'('  shift 22
	tokDec  shift 19
	tokInc  shift 18
	.  error

	expr  goto 165
	string_list  goto 11

state 86
	expr:  expr tokModEq.expr 

	tokLitChar  shift 10
	tokName  shift 8
	tokNumber  shift 9
	tokOffsetof  shift 21
	tokVaArg  shift 23
	tokString  shift 24
	'&'  shift 13
	'+'  shift 14
	'-'  shift 15
	'*'  shift 12
	'!'  shift 16
	'~'  shift 17
	tokSizeof  shift 20
	'('  shift 22
	tokDec  shift 19
	tokInc  shift 18
	.  error

	expr  goto 166
	string_list  goto 11

state 87
	expr:  expr tokLshEq.expr 

	tokLitChar  shift 10
	tokName  shift 8
	tokNumber  shift 9
	tokOffsetof  shift 21
	tokVaArg  shift 23
	tokString  shift 24
	'&'  shift 13
	'+'  shift 14
	'-'  shift 15
	'*'  shift 12
	'!'  shift 16
	'~'  shift 17
	tokSizeof  shift 20
	'('  shift 22
	tokDec  shift 19
	tokInc  shift 18
	.  error

	expr  goto 167
	string_list  goto 11

state 88
	expr:  expr tokRshEq.expr 

	tokLitChar  shift 10
	tokName  shift 8
	tokNumber  shift 9
	tokOffsetof  shift 21
	tokVaArg  shift 23
	tokString  shift 24
	'&'  shift 13
	'+'  shift 14
	'-'  shift 15
	'*'  shift 12
	'!'  shift 16
	'~'  shift 17
	tokSizeof  shift 20
	'('  shift 22
	tokDec  shift 19
	tokInc  shift 18
	.  error

	expr  goto 168
	string_list  goto 11

state 89
	expr:  expr tokAndEq.expr 

	tokLitChar  shift 10
	tokName  shift 8
	tokNumber  shift 9
	tokOffsetof  shift 21
	tokVaArg  shift 23
	tokString  shift 24
	'&'  shift 13
	'+'  shift 14
	'-'  shift 15
	'*'  shift 12
	'!'  shift 16
	'~'  shift 17
	tokSizeof  shift 20
	'('  shift 22
	tokDec  shift 19
	tokInc  shift 18
	.  error

	expr  goto 169
	string_list  goto 11

state 90
	expr:  expr tokXorEq.expr 

	tokLitChar  shift 10
	tokName  shift 8
	tokNumber  shift 9
	tokOffsetof  shift 21
	tokVaArg  shift 23
	tokString  shift 24
	'&'  shift 13
	'+'  shift 14
	'-'  shift 15
	'*'  shift 12
	'!'  shift 16
	'~'  shift 17
	tokSizeof  shift 20
	'('  shift 22
	tokDec  shift 19
	tokInc  shift 18
	.  error

	expr  goto 170
	string_list  goto 11

state 91
	expr:  expr tokOrEq.expr 

	tokLitChar  shift 10
	tokName  shift 8
	tokNumber  shift 9
	tokOffsetof  shift 21
	tokVaArg  shift 23
	tokString  shift 24
	'&'  shift 13
	'+'  shift 14
	'-'  shift 15
	'*'  shift 12
	'!'  shift 16
	'~'  shift 17
	tokSizeof  shift 20
	'('  shift 22
	tokDec  shift 19
	tokInc  shift 18
	.  error

	expr  goto 171
	string_list  goto 11

state 92
	expr:  expr '('.expr_list_opt ')' 
	expr_list_opt: .    (177)
